Bug 1724759 - Skip calling SetSingleTapOccurred for long-tap events. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D197309